--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="stylesheet" href="/src/output.css" />
+
+  <!-- Google Barlow Condensed font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap" rel="stylesheet">
+
   <title>Space Tourism Website</title>
 </head>
 
-<body>
+<body class="bg-mobile-pattern bg-cover bg-no-repeat min-h-screen overflow-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
