Create Crew (mobile)

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <!-- Google Barlow Condensed font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap"
+    rel="stylesheet">
 
   <title>Space Tourism Website</title>
 </head>
 
-<body class="bg-mobile-pattern bg-cover bg-no-repeat min-h-screen overflow-hidden">
+<body class="bg-cover bg-no-repeat min-h-screen bg-very-dark-blue" id="body">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
