Work on Desktop design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Space Tourism Website</title>
 </head>
 
-<body class="bg-cover bg-no-repeat min-h-screen bg-very-dark-blue" id="body">
+<body class="bg-cover bg-no-repeat min-h-screen bg-very-dark-blue overflow-x-hidden" id="body">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
